// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WebpackAstParser > cache parsing > definitions > from wreq(number) > finds the module for a simple wreq call 1`] = `
[
  {
    "filePath": "__test__/.modules/555555.js",
    "locationType": "file_path",
    "range": [
      {
        "character": 0,
        "line": 0,
      },
      {
        "character": 0,
        "line": 0,
      },
    ],
  },
]
`;

exports[`WebpackAstParser > cache parsing > definitions > from wreq(number) > finds the module for a wreq call not in imports 1`] = `
[
  {
    "filePath": "__test__/.modules/333333.js",
    "locationType": "file_path",
    "range": [
      {
        "character": 0,
        "line": 0,
      },
      {
        "character": 0,
        "line": 0,
      },
    ],
  },
]
`;

exports[`WebpackAstParser > cache parsing > definitions > from wreq(number) > finds the module for a wreq call that has an export 1`] = `
[
  {
    "content": "// Webpack Module 333333 - Patched by
0,
function(e, t, n) {
    "use strict";
    n.d(t, {
        U: () => _u,
        I: () => _i,
        E: () => style1Enum,
        F: () => style2Enum
    });
    var r = n(555001)
      , _5 = n(555555);
    function _u() {
        return (0,
        r.jsx)("div", {
            children: ["Hello World", (0,
            r.jsx)(_5.H, {})],
            className: "foo bar"
        });
    }
    function _i() {
        return "abcdef";
    }
    var style1Enum = function(e) {
        return e.FOO1 = "FOO1",
        e.BAR1 = "BAR1",
        e
    }({})
      , style2Enum = function(e) {
        return e[e.FOO2 = 1] = "FOO2",
        e[e.BAR2 = 2] = "BAR2",
        e
    }({});

}
",
    "locationType": "inline",
    "range": [
      {
        "character": 13,
        "line": 12,
      },
      {
        "character": 15,
        "line": 12,
      },
    ],
  },
]
`;

exports[`WebpackAstParser > cache parsing > definitions > wreq.d > enums > style 1 > finds the member def when used normally 1`] = `
[
  {
    "content": "// Webpack Module 333333 - Patched by
0,
function(e, t, n) {
    "use strict";
    n.d(t, {
        U: () => _u,
        I: () => _i,
        E: () => style1Enum,
        F: () => style2Enum
    });
    var r = n(555001)
      , _5 = n(555555);
    function _u() {
        return (0,
        r.jsx)("div", {
            children: ["Hello World", (0,
            r.jsx)(_5.H, {})],
            className: "foo bar"
        });
    }
    function _i() {
        return "abcdef";
    }
    var style1Enum = function(e) {
        return e.FOO1 = "FOO1",
        e.BAR1 = "BAR1",
        e
    }({})
      , style2Enum = function(e) {
        return e[e.FOO2 = 1] = "FOO2",
        e[e.BAR2 = 2] = "BAR2",
        e
    }({});

}
",
    "locationType": "inline",
    "range": [
      {
        "character": 24,
        "line": 24,
      },
      {
        "character": 30,
        "line": 24,
      },
    ],
  },
]
`;

exports[`WebpackAstParser > cache parsing > definitions > wreq.d > enums > style 1 > finds the object def from obj use 1`] = `
[
  {
    "content": "// Webpack Module 333333 - Patched by
0,
function(e, t, n) {
    "use strict";
    n.d(t, {
        U: () => _u,
        I: () => _i,
        E: () => style1Enum,
        F: () => style2Enum
    });
    var r = n(555001)
      , _5 = n(555555);
    function _u() {
        return (0,
        r.jsx)("div", {
            children: ["Hello World", (0,
            r.jsx)(_5.H, {})],
            className: "foo bar"
        });
    }
    function _i() {
        return "abcdef";
    }
    var style1Enum = function(e) {
        return e.FOO1 = "FOO1",
        e.BAR1 = "BAR1",
        e
    }({})
      , style2Enum = function(e) {
        return e[e.FOO2 = 1] = "FOO2",
        e[e.BAR2 = 2] = "BAR2",
        e
    }({});

}
",
    "locationType": "inline",
    "range": [
      {
        "character": 8,
        "line": 23,
      },
      {
        "character": 18,
        "line": 23,
      },
    ],
  },
]
`;

exports[`WebpackAstParser > cache parsing > definitions > wreq.d > enums > style 1 > finds the object def when used in a computed access 1`] = `
[
  {
    "content": "// Webpack Module 333333 - Patched by
0,
function(e, t, n) {
    "use strict";
    n.d(t, {
        U: () => _u,
        I: () => _i,
        E: () => style1Enum,
        F: () => style2Enum
    });
    var r = n(555001)
      , _5 = n(555555);
    function _u() {
        return (0,
        r.jsx)("div", {
            children: ["Hello World", (0,
            r.jsx)(_5.H, {})],
            className: "foo bar"
        });
    }
    function _i() {
        return "abcdef";
    }
    var style1Enum = function(e) {
        return e.FOO1 = "FOO1",
        e.BAR1 = "BAR1",
        e
    }({})
      , style2Enum = function(e) {
        return e[e.FOO2 = 1] = "FOO2",
        e[e.BAR2 = 2] = "BAR2",
        e
    }({});

}
",
    "locationType": "inline",
    "range": [
      {
        "character": 8,
        "line": 23,
      },
      {
        "character": 18,
        "line": 23,
      },
    ],
  },
]
`;

exports[`WebpackAstParser > cache parsing > definitions > wreq.d > enums > style 2 > finds the member def when used normally 1`] = `
[
  {
    "content": "// Webpack Module 333333 - Patched by
0,
function(e, t, n) {
    "use strict";
    n.d(t, {
        U: () => _u,
        I: () => _i,
        E: () => style1Enum,
        F: () => style2Enum
    });
    var r = n(555001)
      , _5 = n(555555);
    function _u() {
        return (0,
        r.jsx)("div", {
            children: ["Hello World", (0,
            r.jsx)(_5.H, {})],
            className: "foo bar"
        });
    }
    function _i() {
        return "abcdef";
    }
    var style1Enum = function(e) {
        return e.FOO1 = "FOO1",
        e.BAR1 = "BAR1",
        e
    }({})
      , style2Enum = function(e) {
        return e[e.FOO2 = 1] = "FOO2",
        e[e.BAR2 = 2] = "BAR2",
        e
    }({});

}
",
    "locationType": "inline",
    "range": [
      {
        "character": 19,
        "line": 30,
      },
      {
        "character": 20,
        "line": 30,
      },
    ],
  },
]
`;

exports[`WebpackAstParser > cache parsing > definitions > wreq.d > enums > style 2 > finds the object def from obj use 1`] = `
[
  {
    "content": "// Webpack Module 333333 - Patched by
0,
function(e, t, n) {
    "use strict";
    n.d(t, {
        U: () => _u,
        I: () => _i,
        E: () => style1Enum,
        F: () => style2Enum
    });
    var r = n(555001)
      , _5 = n(555555);
    function _u() {
        return (0,
        r.jsx)("div", {
            children: ["Hello World", (0,
            r.jsx)(_5.H, {})],
            className: "foo bar"
        });
    }
    function _i() {
        return "abcdef";
    }
    var style1Enum = function(e) {
        return e.FOO1 = "FOO1",
        e.BAR1 = "BAR1",
        e
    }({})
      , style2Enum = function(e) {
        return e[e.FOO2 = 1] = "FOO2",
        e[e.BAR2 = 2] = "BAR2",
        e
    }({});

}
",
    "locationType": "inline",
    "range": [
      {
        "character": 8,
        "line": 28,
      },
      {
        "character": 18,
        "line": 28,
      },
    ],
  },
]
`;

exports[`WebpackAstParser > cache parsing > definitions > wreq.d > enums > style 2 > finds the object def when used in a computed access 1`] = `
[
  {
    "content": "// Webpack Module 333333 - Patched by
0,
function(e, t, n) {
    "use strict";
    n.d(t, {
        U: () => _u,
        I: () => _i,
        E: () => style1Enum,
        F: () => style2Enum
    });
    var r = n(555001)
      , _5 = n(555555);
    function _u() {
        return (0,
        r.jsx)("div", {
            children: ["Hello World", (0,
            r.jsx)(_5.H, {})],
            className: "foo bar"
        });
    }
    function _i() {
        return "abcdef";
    }
    var style1Enum = function(e) {
        return e.FOO1 = "FOO1",
        e.BAR1 = "BAR1",
        e
    }({})
      , style2Enum = function(e) {
        return e[e.FOO2 = 1] = "FOO2",
        e[e.BAR2 = 2] = "BAR2",
        e
    }({});

}
",
    "locationType": "inline",
    "range": [
      {
        "character": 8,
        "line": 28,
      },
      {
        "character": 18,
        "line": 28,
      },
    ],
  },
]
`;

exports[`WebpackAstParser > cache parsing > definitions > wreq.d > finds the use of a simple import 1`] = `
[
  {
    "content": "// Webpack Module 222222 - Patched by
0,
function(e, t, n) {
    "use strict";
    n.d(t, {
        H: () => _h,
        J: () => _j,
        G: () => _g
    });
    const r = n(555001)
      , _3 = n(333333);
    function _h(p1, p2=4) {
        return p1 + p2
    }
    function _j(p1, p2) {
        return p1 - p2
    }
    function _g() {
        // computed enum access
        let c = _()
          , c2 = _();
        console.log(_3.E[c], _3.F[c2]);
        return (0,
        r.jsx)(_3.U, {
            children: (0,
            r.jsxs)("div", {
                children: ["Hello World", (0,
                r.jsx)(_3.I, {
                    children: "goodbye"
                })]
            })
        })
    }
}
",
    "locationType": "inline",
    "range": [
      {
        "character": 13,
        "line": 17,
      },
      {
        "character": 15,
        "line": 17,
      },
    ],
  },
]
`;

exports[`WebpackAstParser > cache parsing > definitions > wreq.d > finds the use of a simple import 2 1`] = `
[
  {
    "content": "// Webpack Module 333333 - Patched by
0,
function(e, t, n) {
    "use strict";
    n.d(t, {
        U: () => _u,
        I: () => _i,
        E: () => style1Enum,
        F: () => style2Enum
    });
    var r = n(555001)
      , _5 = n(555555);
    function _u() {
        return (0,
        r.jsx)("div", {
            children: ["Hello World", (0,
            r.jsx)(_5.H, {})],
            className: "foo bar"
        });
    }
    function _i() {
        return "abcdef";
    }
    var style1Enum = function(e) {
        return e.FOO1 = "FOO1",
        e.BAR1 = "BAR1",
        e
    }({})
      , style2Enum = function(e) {
        return e[e.FOO2 = 1] = "FOO2",
        e[e.BAR2 = 2] = "BAR2",
        e
    }({});

}
",
    "locationType": "inline",
    "range": [
      {
        "character": 13,
        "line": 12,
      },
      {
        "character": 15,
        "line": 12,
      },
    ],
  },
]
`;

exports[`WebpackAstParser > cache parsing > hover text cross-module > finds the hover text for a store from another module 1`] = `
[
  [
    {
      "character": 11,
      "line": 38,
    },
    {
      "character": 13,
      "line": 38,
    },
  ],
  "MyTestingStore",
]
`;

exports[`WebpackAstParser > cache parsing > hover text cross-module > finds the hover text for a store from another module 2`] = `
[
  [
    {
      "character": 23,
      "line": 15,
    },
    {
      "character": 25,
      "line": 15,
    },
  ],
  "MyTestingStore",
]
`;

exports[`WebpackAstParser > cache parsing > hover text cross-module > finds the hover text for a store from another module 3`] = `
[
  [
    {
      "character": 23,
      "line": 31,
    },
    {
      "character": 25,
      "line": 31,
    },
  ],
  "MyTestingStore",
]
`;
